--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     tty: true
   python:
     depends_on:
-      - workspace_oikawa
+      - image_caption_workspace_oikawa
     build:
       context: ./
       dockerfile: ./docker/python/Dockerfile
