--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "8080:8080"
       - "8888:8888"
     volumes:
-      - nvidia_driver_375.66:/usr/local/nbidia:ro
+      - nvidia_driver_375.66:/usr/local/nvidia:ro
       - ./:/workspace
     working_dir: "/workspace"
     tty: true
@@ -22,7 +22,7 @@ services:
       context: ./
       dockerfile: ./docker/python/Dockerfile
     volumes:
-      - nvidia_driver_375.66:/usr/local/nbidia:ro
+      - nvidia_driver_375.66:/usr/local/nvidia:ro
       - ./:/workspace
     working_dir: "/workspace"
 volumes:
