--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,10 @@ services:
       - "8080:8080"
       - "8888:8888"
     volumes:
-      - nvidia_driver_375.66:/usr/local/nvidia:ro
       - ./:/workspace
-    devices:
-      - /dev/nvidiactl
-      - /dev/nvidia-uvm
-      - /dev/nvidia0
     working_dir: "/workspace"
     tty: true
+    command: nvidia-smi
   python:
     depends_on:
       - image_caption_workspace_oikawa
@@ -26,13 +22,5 @@ services:
       context: ./
       dockerfile: ./docker/python/Dockerfile
     volumes:
-      - nvidia_driver_375.66:/usr/local/nvidia:ro
       - ./:/workspace
-    devices:
-      - /dev/nvidiactl
-      - /dev/nvidia-uvm
-      - /dev/nvidia0
     working_dir: "/workspace"
-volumes:
-  nvidia_driver_375.66:
-      external: true
