--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 .DS_Store
 /.idea
-/dataset/dataset.json
+/dataset/*
+/images
+/model
 dataset.pkl
+vgg19.pkl
+stair_caption_dataset.pkl
 vgg_feats.mat
 VGG_ILSVRC_19_layers.caffemodel
 __memo.md
 output_*
-vgg19.pkl
 src/__pycache__/
